--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xl3vu9XUSFLCJHnk01CI2gWV0ANE/76KiGKkL1RdVEA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
